--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "eslint-config-next": "^15.1.6",
     "postcss": "^8.5",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5"
   }
